--- a/musicmaker/templates/body.html
+++ b/musicmaker/templates/body.html
@@ -1,8 +1,9 @@
+{%load static%}
 <div class="mb-0 pb-0 mt-3 mx-3 d-flex justify-content-end">
-    <img height="200" src="https://img.freepik.com/free-vector/cute-astronaut-listening-with-boombox-cartoon-vector-icon-illustratiod-science-technology-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-4162.jpg" alt="">
+    <img height="210" style="position: relative; top:17px" src="{% static 'astro.png'%}" alt="">
 </div>
 
 <div class="ms-body p-5 mt-0 mx-3">
-    <h5>This is the body</h5>
+    <h5 class="text-white fw-light">space that let you listen what you want</h5>
 
 </div>
