--- a/musicmaker/templates/body.html
+++ b/musicmaker/templates/body.html
@@ -3,7 +3,13 @@
     <img height="210" style="position: relative; top:17px" src="{% static 'astro.png'%}" alt="">
 </div>
 
-<div class="ms-body p-5 mt-0 mx-3">
-    <h5 class="text-white fw-light">space that let you listen what you want</h5>
+<div class="ms-body py-5 mt-0 mx-3">
+    <h4 class="text-white text-center fw-light">choose any action to symphonize your env</h4>
+    <div class=" d-flex mx-5 p-5 justify-content-center">
+        <button class="btn btn-lg me-4 btn-outline-light"> Create Yourself a Playlist &nbsp; <i class="fa-solid fa-music"></i></button>
+        <button class="btn  btn-light btn-lg text-danger">Download a Premade Playlist &nbsp; <i class="fa-solid fa-list-check"></i></button>
+    </div>
+    <h6 class="text-white text-center fw-light">musicSpace let you listen whatever you want ...</h6>
+    
 
 </div>
