--- a/musicmaker/templates/index.html
+++ b/musicmaker/templates/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{%load static%}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,13 +7,18 @@
     <title>musicSpace</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
+    <link rel="stylesheet" href="{%static 'style.scss' %}">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap");
         * {
         box-sizing: border-box;
         font-family: "Outfit", sans-serif;
         scroll-behavior: smooth;
+        }
+        body{
+          height: 100%;
+          margin: 0;
+          overflow: hidden;
         }
         .navbar-brand{
             background-color: #f34e53
@@ -23,8 +29,7 @@
         .ms-body{
             background-color: #f34e53
         }
-        
-        
+
     </style>
   </head>
   <body>
@@ -48,7 +53,7 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link link fs-6" href="#">How to use?</a>
+                        <a class="nav-link link fs-6" href="#">How it works?</a>
                       </li>
                      
                     </ul>
@@ -57,18 +62,19 @@
               </nav>
               {%include 'body.html'%}
 
+             <footer>
+              <p class="text-center p-5 mt-4">
+                &copy; musicSpace 2023
+              </p>
+             </footer>
+
+             
+
 
         </div>
         </div>
 
 
-
-
-
-
-
-
-   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
