--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg mt-0 pt-0">
     <div class="container-fluid">
-      <h4 class="navbar-brand text-white pt-5 px-5 pb-2" href="#">
+      <a class="navbar-brand text-white fs-4 pt-5 px-5 pb-2" href="/">
         musicSpace <i class="fa-solid fa-heart-circle-bolt"></i>
-      </h4>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
