--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,28 @@
           color:#f34e53 !important;
         }
 
+
+        /* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f34e53; 
+  border-radius: 0px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4b4949; 
+}
+
     </style>
   </head>
   <body>
