fix download ad UI

--- a/templates/musicmaker/userlist.html
+++ b/templates/musicmaker/userlist.html
@@ -20,7 +20,7 @@
                 <div>
                     <p class="fw-light">{{object.created_date}}</p>
                 </div>
-                <div>contains 10 songs</div>
+                <div> <b>{{object.totalsongs}}</b> &nbsp; songs</div>
             </div>
             
            </a>
