--- a/templates/musicmaker/playlist-detail.html
+++ b/templates/musicmaker/playlist-detail.html
@@ -32,8 +32,8 @@
           {% for object in songs %}
                  <div class="py-2">
                   <a href="" class="text-decoration-none text-dark">
-                      <div class="d-flex justify-content-around">
-                        <div>
+                      <div class="d-flex justify-content-between">
+                        <div class="text-center">
                             <p class="fw-light">{{forloop.counter}}</p>
                         </div>
                           <div>
@@ -54,6 +54,7 @@
             <p class="text-muted text-center p-5 m-5">No added songs.</p>
             {% endfor %}
            </div>
+           <hr class="text-secondary pt-0 pb-0">
            <div class="mx-3 d-flex justify-content-end">
             <div>
                 <button class="btn btn-text"> Load Excel File Instead</button>
