--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,12 @@
         .text-primary{
           color:#f34e53 !important;
         }
+        .text-danger{
+           color:#ffffff !important;
+        }
+        .bg-danger{
+          background-color:#f34e53 !important;
+        }
 
 
         /* width */
@@ -57,6 +63,9 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #4b4949; 
+}
+.form-label{
+  display: none;
 }
 
     </style>
