--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,12 +8,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link  link fs-6" aria-current="page" href="#">Create Playlist</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link link fs-6" href="#">Recommend Me</a>
-          </li>
+         
 
           <!-- <li class="nav-item">
             <a class="nav-link link fs-6" href="#">How it works?</a>
@@ -23,9 +18,21 @@
           <li class="nav-item">
             <a class="nav-link link fs-6" href="{%url 'musicmaker:user-pl'%}">Your Playlists</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link  link fs-6" aria-current="page" href="#">Create Playlist</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link fs-6" href="#">Recommend Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link fs-6" href="{% url 'account:logout' %}">Lemme Go</a>
+          </li>
           {%else%}
           <li class="nav-item">
-            <a class="nav-link link fs-6" href="#">Join Now</a>
+            <a class="nav-link link fs-6" href="{% url 'account:register' %}">Join Now</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link fs-6" href="{%url 'account:signin' %}">Get In</a>
           </li>
 
           {%endif%}
