add playlist listview

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,20 +3,25 @@
 {% load django_bootstrap5 %}
 
 {% block bodyblock%}
+<style>
+    .form-label{
+  display: none;
+}
+</style>
 <div class="m-5 p-5 container">
     <div class="col-lg-8 mx-auto mb-2 ">
         <div class="row">
-            <div class="col-lg-5">
-                <img class="img-fluid mt-2"  src="{% static 'astro.png'%}" alt="">
+            <div class="col border">
+                <img class="img-fluid   "  src="{% static 'login.png'%}" alt="login image">
             </div>
-            <div class="col bg-danger">
-                <h3 class="text-white fw-light text-center mt-4 pt-3">Get In | musicSpace</h3>
+            <div class="col-lg-7 bg-danger">
+                <h3 class="text-white fw-light text-center mt-5 pt-3">getIn | musicSpace</h3>
                 <div class=" p-5">
                     <form action="" method="post"  class="text-center">
                         {%csrf_token%}
                         {% bootstrap_form form   %}
                         <div class="d-flex justify-content-center my-3">
-                            <button class="btn btn-outline-light mt-3 ">Lemme In</button>
+                            <button class="btn btn-outline-light mt-3 ">lemmeIn</button>
                         </div>
         
         
