--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
         .bg-danger{
           background-color:#f34e53 !important;
         }
+        .invalid-feedback{
+          color: #ffffff !important;
+        }
 
 
         /* width */
@@ -64,9 +67,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #4b4949; 
 }
-.form-label{
-  display: none;
-}
+
 
     </style>
   </head>
