--- a/templates/musicmaker/index.html
+++ b/templates/musicmaker/index.html
@@ -9,7 +9,7 @@
   <h4 class="text-white text-center fw-light">choose any action to symphonize your env</h4>
   <div class=" d-flex mx-5 p-5 justify-content-center">
       <button class="btn btn-lg me-4 btn-outline-light" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" > Create Yourself a Playlist &nbsp; <i class="fa-solid fa-music"></i></button>
-      <button class="btn  btn-light btn-lg text-danger">Download a Premade Playlist &nbsp; <i class="fa-solid fa-list-check"></i></button>
+      <a href="{% url 'musicmaker:playlists'%}"  class="btn  btn-light btn-lg text-primary">Download a Premade Playlist &nbsp; <i class="fa-solid fa-list-check"></i></a>
   </div>
   <h6 class="text-white text-center fw-light">musicSpace let you listen whatever you want ...</h6>
   
